argocd_stuff/nextcloud/nextcloud.yaml
# ########################################################## INGRESS ROUTE

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-ingress
  namespace: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nextcloud.andreiboghean.com`)
      services:
        - name: nextcloud
          port: 8080
  tls:
    certResolver: default
